@@ -16,8 +16,6 @@ Project Leader / Developer:
 - Christoph Rauch
 - Clemens Hermann
 - Jason Kirtland
-- Ali Afshar
-- Christopher Grebs <cg@webshox.org>
 
 Contributors of code for werkzeug/examples are:
 
